Fix iOS input shadow and scroll behind button

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,4 +1,8 @@
 /* FOOTER */
+.page {
+    padding-bottom: 90px; // Leave more space for scrolling past big red button
+}
+
 button.fpg-btn.fpg-btn-large {
     position: fixed;
     bottom: 20px;
