--- a/src/scss/layout/_forms.scss
+++ b/src/scss/layout/_forms.scss
@@ -15,6 +15,11 @@ select {
     }
 }
 
+input,
+textarea {
+    -webkit-appearance: none; // Get rid of inner shadow on iOS Safari
+}
+
 input[type=number],
 input[type=password],
 input[type=tel],
